--- a/1 Sectioning.html
+++ b/1 Sectioning.html
@@ -40,6 +40,6 @@
 <h3>WAI-ARIA Roles</h3>
 <p>Carefully structuring an HTML page is the first step into ensuring that the content is accessible to all users. You should also use WAI-ARIA role attributes where appropriate to increase accessibility and improve semantics. WAI-ARIA is short for the Web Accessibility Initiative's Accessible Rich Internet Application specification. The roles attribute attempts to identify content and its capabilities by assigning it to a predefined role. This helps assistive devices understand what the content is, how it relates to other content, and how the content can be interacted with. The W3C has a <a href="https://www.w3.org/TR/using-aria/" title="Using WAI-ARIA in HTML">fantastic resource</a> on how WAI-ARIA works and how it should be used with HTML.</p>
 
-<p> Copywrite &copy; HTML5 Documentation</p>
+<p> Copyright &copy; HTML5 Documentation</p>
 </body>
 </html>
